spacing issue

--- a/wp-content/themes/known_starter/src/sass/partials/_blog.scss
+++ b/wp-content/themes/known_starter/src/sass/partials/_blog.scss
@@ -331,7 +331,7 @@ BLOG GRID
     }
     a {
       display: inline-block;
-      width: 100%;
+      width: 95%;
       height: 100%;
       position: absolute;
       overflow: hidden;
@@ -442,7 +442,7 @@ BLOG GRID
     }
     a {
       display: inline-block;
-      width: 100%;
+      width: 95%;
       height: 100%;
       position: absolute;
       overflow: hidden;
